- Updated - Pattern registry - add latest list of valid properties
- Updated - CSS reset simplified and optimized (moved into block styles / forms)
- Updated - Inputs styles moved inline and enqueue on demand
- Removed - __experimentalLayout for core/template-part block (also removed from templates / template edits are required)
- Removed - core/post-comments-link from Post Meta pattern
- Fixed - core/button outline default color rgb variable added in CSS
- Fixed - core/social inline CSS generation (for single SVG icons) if 2 or more blocks are used on the template
- Fixed - core/gallery admin styles and Frontend gap
- Fixed - core/post-title block supports
- Added - shadow support in theme.json (upcoming WP versions)
- Added - core/post-author link class (wp-block-post-author__link)
- Added - core/post-terms link class (wp-block-post-terms__link)
- Added - core/separator styles - must have a defined height custom CSS;
- Added - new dom() function to manipulate HTML markup for Gutenberg blocks
- Added - Improved SEO: Schema.org for header/footer/sidebar template parts
- Added - Yoast SEO`s FAQ block markup updated to "details" HTML element + improved styles
- Added - Coming Soon pattern (for pages)
- Added - Call to Action patterns
- Added - Cards patterns with 3 variations
- Added - viewportWidth property to patterns registered from HTML files in the theme
- Added - Gutenberg page title highlight when focused / background contrast vs rest of the page

v5.7.1
- Updated - core/archives type attribute
- Updated - core/latest-posts featured image alignment
- Updated - core/search query params output and styles extension ouput
- Updated - Starter content for homepage
- Added - Fragment cache for WooCommerce Mini Cart block (which changed the fragments loading on mouseover instead of page load) for LiteSpeed
- Fixed - Captcha4WP comment hooks and class name change after was bought (ANR plugin)
- Fixed - core/comments-title text alignment class