@@ -9,7 +9,7 @@
  * @subpackage 	Support\Plugins\WooCommerce\Conditional\is_woocommerce_archive
  * @copyright   Copyright (c) 2023, WeCodeArt Framework
  * @since 		4.0.1
- * @version		4.0.1
+ * @version		5.7.2
  */
 
 namespace WeCodeArt\Support\Plugins\WooCommerce\Conditional;
@@ -17,7 +17,6 @@ namespace WeCodeArt\Support\Plugins\WooCommerce\Conditional;
 defined( 'ABSPATH' ) || exit(); 
 
 use WeCodeArt\Conditional\Interfaces\ConditionalInterface;
-use function WeCodeArt\Functions\detect_plugin;
 
 /**
  * Conditional that is only met when in the front page.
@@ -28,12 +27,12 @@ class Archive implements ConditionalInterface {
 	 * @inheritdoc
 	 */
 	public function is_met() {
-		if ( detect_plugin( [ 'classes' => [ 'woocommerce' ] ] ) ) {
+		if ( wecodeart_if( 'is_woocommerce_active' ) ) {
 			if ( \is_shop() || \is_product_taxonomy() || \is_product_category() || \is_product_tag() ) {
 				return true;
 			}
-			return false;
 		}
+
 		return false;
 	}
 }
