@@ -9,7 +9,7 @@
  * @subpackage 	Support\Plugins\WooCommerce\Conditional\is_woocommerce_page
  * @copyright   Copyright (c) 2023, WeCodeArt Framework
  * @since 		4.0.1
- * @version		5.0.0
+ * @version		5.7.2
  */
 
 namespace WeCodeArt\Support\Plugins\WooCommerce\Conditional;
@@ -17,7 +17,6 @@ namespace WeCodeArt\Support\Plugins\WooCommerce\Conditional;
 defined( 'ABSPATH' ) || exit(); 
 
 use WeCodeArt\Conditional\Interfaces\ConditionalInterface;
-use function WeCodeArt\Functions\detect_plugin;
 
 /**
  * Conditional that is only met when in the Woo Pages.
@@ -28,12 +27,12 @@ class Page implements ConditionalInterface {
 	 * @inheritdoc
 	 */
 	public function is_met() {
-		if ( detect_plugin( [ 'classes' => [ 'woocommerce' ] ] ) ) {
+		if ( wecodeart_if( 'is_woocommerce_active' ) ) {
 			if ( \is_woocommerce() || \is_cart() || \is_checkout() || \is_account_page() ) {
 				return true;
 			}
-			return false;
 		}
+		
 		return false;
 	}
 }
