@@ -25,6 +25,7 @@ v5.7.2
 - Updated - Inputs styles moved inline and enqueue on demand
 - Removed - __experimentalLayout for core/template-part block (also removed from templates / template edits are required)
 - Removed - core/post-comments-link from Post Meta pattern
+- Removed - custom logo customizer support
 - Fixed - core/button outline default color rgb variable added in CSS
 - Fixed - core/social inline CSS generation (for single SVG icons) if 2 or more blocks are used on the template
 - Fixed - core/gallery admin styles and Frontend gap
